tests/ui/fail/description_must_be_last.stderr
error: contract description must be the last argument
 --> tests/ui/fail/description_must_be_last.rs:3:12
  |
3 | #[requires("x must be positive", x > 0)]
  |            ^^^^^^^^^^^^^^^^^^^^
